# tweet_analyzer

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.perf  LICENSE  README.md  REAMDE.md  entrypoint.sh
client/: index.html  package-lock.json  package.json  tsconfig.json
client/src/: forceLink.ts  helpers.ts  main-page.ts  types.ts
server/: Cargo.toml
server/src/: data_model.rs  helpers.rs  main.rs  memory_trimmer.rs  mhs.rs  similarity_computer.rs  tweet_analyzer.rs  tweet_grabber.rs  types.rs  web.rs
