[package]
name = "tweet_analyzer_server"
version = "0.0.1"
authors = ["Aaron Roney <twitchax>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.21", features = ["full"] }
egg-mode = "0.14.0"
time = "0.2.23"
log = { version = "0.4.8", features = ["release_max_level_info"] }
simple_logger = "1.0.1"
chrono = "0.4.11"
yansi = "0.5.0"
mongodb = "1.0.0"
bson = "1.0.0"
lazy_static = "1.4.0"
rayon = "1.3.0"
futures = "0.3.5"
rand = "0.7.3"
serde = "1.0.111"
toml = "0.5.6"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }